--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Gambling is Poor For Your Health</title>
+		<title>Dice/title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Why bother read the footer?
+		    Why bother reading the footer?
 	    </footer>
 	</body>
 </html>
