--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>W</h1>
+			<h1>This is a set of die</h1>
 		</header>
 			<section id="content">
 				<canvas id="Dice" data-processing-sources="Dice.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Still, Why bother reading the footer?
 	    </footer>
 	</body>
 </html>
